--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 줄바꿈::
 ===
 <h4 class='text-center'><b class='colyel churchname'> </b>가장제일교회 온라인 기도실</h4>
-	<h6 class='text-center text-white'>그들로 하나가 되게</h6>
+	<h6 class='text-center text-white'>행복한 교회 공동체 나로부터 시작되리!</h6>
  
 ---
   
