--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 줄바꿈::
 ===
 <h4 class='text-center'><b class='colyel churchname'> </b>가장제일교회 온라인 기도실</h4>
-	<h6 class='text-center text-white'>행복한 교회 공동체 나로부터 시작되리!</h6>
+	<h6 class='text-center text-white'>행복한 교회 공동체</h6>
  
 ---
   
@@ -66,20 +66,17 @@
 
 <div class='maincard clearfix'  data-bg="https://pgsixt.github.io/15/15_morning_way_light.jpg" data-desktop="https://pgsixt.github.io/15/15_path.jpg">
 
-제목::[기도,] [[그 여정을 시작하며]]
+제목::[알립니다.]
 ===
-설명*::이곳은 주님께 나아가는 자리입니다.
-설명*::30분 정도 여유를 갖고 하시길 바랍니다.
-설명*::말씀과 묵상, 찬양과 기도로 함께 합니다.
-설명*::하단의 버튼을 누르면 다음 기도제목으로 넘어갑니다.
+설명*::묵상과 기도 그리고 찬양과 말씀으로 이어집니다.
+설명*::30분 정도 여유롭게 시간을 할애합니다.
+설명*::성령께서 도우실 것입니다. 
+설명*::영과 진리로 예배합니다.
 ---
-줄바꿈::
-
-중간본문::[성령님]께서 우리의 기도를 인도해 주십니다. 도우심을 구하며 기도를 시작합니다.
 줄바꿈::
 오른쪽작은본문::준비가 되면, 아래의 [버튼]을 눌러주세요. 
 줄바꿈::
-다음버튼::기도로 나아가며
+다음버튼::예배하기
 
 
 </div>
@@ -87,78 +84,80 @@
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_piano.jpg" >
 줄바꿈::
 
-제목::[찬양], [[마음을 열며]]
+제목::[찬양][[합니다.]]
 ===
-설명*::찬양의 가사를 천천히 읽어 봅시다.
+설명*::찬양의 기사를 천천히 읽어 봅니다.
 ---
-중간본문::아버지여 구하오니 이제 이 땅 고쳐주소서
-중간본문::우리 맘 엮으사 주의 영광 나타내소서
-중간본문::만유의 주님 온 세상 알도록
+중간본문::1
+중간본문::나의 갈 길 다가도록 예수 인도하시니
+중간본문::내 주 안에 있는 긍휼 어찌 의심하리요
+중간본문::믿음으로 사는 자는 하늘 위로 받겠네
+중간본문::무슨 일을 만나든지 만사 형통하리라(×2)
 줄바꿈::
-중간본문::목소리 합쳐 주께 영광 돌리며
-중간본문::주님의 통치 선포하게 하소서
-중간본문::목소리 합쳐 주님을 찬양하며
-중간본문::이제 하나가 되게 하소서
-
-다음버튼::다음
-
-</div>
-
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_piano.jpg">
-
-중간본문::함께 주를 찬양하며 이제 우리 마음 합치세
-중간본문::주 예수 그 이름 온 땅 위에 높이 들리리
-중간본문::만유의 주님 온 세상 보도록
-줄바꿈::
-중간본문::목소리 합쳐 주께 영광 돌리며
-중간본문::주님의 통치 선포하게 하소서
-중간본문::목소리 합쳐 주님을 찬양하며
-중간본문::이제 하나가 되게 하소서
+중간본문::2
+중간본문::나의 갈 길 다가도록 예수 인도하시니
+중간본문::어려운 일 당한 때도 족한 은혜 주시네
+중간본문::나는 심히 고단하고 영혼 매우 갈하나
+중간본문::나의 앞에 반석에서 샘물 나게 하시네(×2)
 줄바꿈::
 
-
 줄바꿈::
-오른쪽작은본문::아버지여 구하오니 (CBS)
+오른쪽작은본문::F.I.A-나의 갈 길 다가도록(찬송가 384장)
 
-유튜브::nLgtFgVeY30
+유튜브::18JLajtq7iM
 
 줄바꿈::
 
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
 
- </div>
-
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_dark_night_moon.jpg">
-
-제목::[말씀], [[우리의 시선을 두고]]
----
-설명*::말씀을 천천히 여러 번 읽습니다.
-설명*::본문은 요한복음17:9-14 말씀입니다.
----
-중간본문::9 내가 그들을 위하여 비옵나니 내가 비옵는 것은 세상을 위함이 아니요 [내게 주신 자들]을 위함이니이다 그들은 아버지의 것이로소이다
-줄바꿈::
-중간본문::10 내 것은 다 아버지의 것이요 아버지의 것은 내 것이온데 내가 [그들로 말미암아] 영광을 받았나이다
-줄바꿈::
-중간본문::11 나는 세상에 더 있지 아니하오나 그들은 세상에 있사옵고 나는 아버지께로 가옵나니 거룩하신 아버지여 내게 주신 아버지의 이름으로 [그들을 보전하사] 우리와 같이 그들도 [하나가 되게 하옵소서]
-
-
-다음버튼::계속
-
 </div>
 
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_dark_night_moon.jpg">
 
-제목::[말씀], [[우리의 시선을 두고]]
-===
-설명*::조금은 천천히, 한 단어씩 예수님의 기도를 따라 읽습니다.
+제목::[주님][[의 말씀입니다.]]
 ---
-중간본문::12 내가 그들과 함께 있을 때에 내게 주신 아버지의 이름으로 그들을 보전하고 지키었나이다 그 중의 하나도 멸망하지 않고 다만 멸망의 자식뿐이오니 이는 성경을 응하게 함이니이다
+설명*::말씀을 천천히 읽습니다.
+설명*::본문 : 살전 5:1-11
+---
+중간본문::1 형제들아 때와 시기에 관하여는 너희에게 쓸 것이 없음은
 줄바꿈::
-중간본문::13 지금 내가 아버지께로 가오니 내가 세상에서 이 말을 하옵는 것은 그들로 내 기쁨을 그들 안에 충만히 가지게 하려 함이니이다
+중간본문::2 주의 날이 밤에 도둑 같이 이를 줄을 너희 자신이 자세히 알기 때문이라
 줄바꿈::
-중간본문::14 내가 아버지의 말씀을 그들에게 주었사오매 [세상이 그들을 미워하였사오니] 이는 내가 세상에 속하지 아니함 같이 그들도 세상에 속하지 아니함으로 인함이니이다
-오른쪽작은본문::말씀을 충분히 읽은 후 넘어갑니다.
+중간본문::3 그들이 평안하다, 안전하다 할 그 때에 임신한 여자에게 해산의 고통이 이름과 같이 멸망이 갑자기 그들에게 이르리니 결코 피하지 못하리라
+줄바꿈::
+중간본문::4 형제들아 너희는 어둠에 있지 아니하매 그 날이 도둑 같이 너희에게 임하지 못하리니
 
+다음버튼::계속
+
+</div>
+				
+<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_dark_night_moon.jpg">
+
+제목::[주님][[의 말씀입니다.]]
+---
+중간본문::5 너희는 다 빛의 아들이요 낮의 아들이라 우리가 밤이나 어둠에 속하지 아니하나니
+줄바꿈::
+중간본문::6 그러므로 우리는 다른 이들과 같이 자지 말고 오직 깨어 정신을 차릴지라
+줄바꿈::
+중간본문::7자는 자들은 밤에 자고 취하는 자들은 밤에 취하되
+줄바꿈::
+중간본문::8 우리는 낮에 속하였으니 정신을 차리고 믿음과 사랑의 호심경을 붙이고 구원의 소망의 투구를 쓰자
+줄바꿈::
+중간본문::9 하나님이 우리를 세우심은 노하심에 이르게 하심이 아니요 오직 우리 주 예수 그리스도로 말미암아 구원을 받게 하심이라
+	
+다음버튼::계속
+
+</div>
+				
+<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_dark_night_moon.jpg">
+
+제목::[주님][[의 말씀입니다.]]
+---
+중간본문::10 예수께서 우리를 위하여 죽으사 우리로 하여금 깨어 있든지 자든지 자기와 함께 살게 하려 하셨느니라
+줄바꿈::
+중간본문::11 그러므로 피차 권면하고 서로 덕을 세우기를 너희가 하는 것 같이 하라
+줄바꿈::
+	
 다음버튼::아멘
 
 </div>
@@ -166,16 +165,11 @@
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_beam_mountain.jpg" data-desktop="https://pgsixt.github.io/15/15_beam_field.jpg">
 
 
-제목::[그들로] [[말미암아]]
+제목::[설교] [[제목]]
 ===
-설명*::말씀을 새기며 기도합니다.
+설명*::말씀
 ---
-중간본문::예수님은 최후의 순간까지 제자들을 사랑하셨습니다.
-줄바꿈::
-중간본문::연약한 제자들, 곧 떠나게 될 제자들이지만, 하나님께서 허락해 주신 제자들에 대하여 감사하십니다.
-줄바꿈::
-중간본문::우리를 통해 영광받으셨다고 말씀하시는 예수님께 감사의 기도를 드립시다.
-
+중간본문::말씀
 줄바꿈::
 
 다음버튼::다음
@@ -185,16 +179,16 @@
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_baby_hand.jpg">
 
  
-제목::[아버지의] [[이름으로 보전하사]]
+제목::[오늘의] [[말씀입니다.]]
 ===
-설명*::말씀을 새기며 기도합니다.
+설명*::본문
 ---
 
-중간본문::아버지의 이름으로 지켜달라는 것은 아버지의 소유로 삼으신다는 뜻입니다.
+중간본문::말씀1
 줄바꿈::
-중간본문::하나님께서 인생을 붙잡아 주시고 지켜주셔야 세상에서 승리할 수 있습니다.
+중간본문::말씀2
 줄바꿈::
-중간본문::우리를 아버지의 이름으로 지켜주시고, 보전하여 주시길 기도합시다.
+중간본문::말씀3
 줄바꿈::
 
 다음버튼::다음
@@ -202,20 +196,17 @@
 
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_baby_hand.jpg">
 
-
-
-
-제목:: [내게] [[주신 자들]]
+제목:: [기도] [[합니다.]]
 
 ===
-설명*::우리에게 맡겨진 이들이 있습니다.
+설명*::기도제목
 ---
 
-중간본문::예수님께서 아버지의 소유인 자들을 위해 기도하셨듯이 우리에게 주신 사람들이 있습니다.
+중간본문::기도내용1
 줄바꿈::
-중간본문::주님께서 우리에게 주신 자들을 붙잡아 주시길 기도합시다.
+중간본문::기도내용2
 줄바꿈::
-가운데작은본문::[가족, 구역 식구들과 연약한 이웃들을 위하여]
+가운데작은본문::[기도내용3]
 줄바꿈::
 다음버튼::다음
 
@@ -223,151 +214,28 @@
 
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_red_cross.jpg" data-desktop="https://pgsixt.github.io/15/15_bluecross.jpg">
 
-제목::  [하나가] [[되게 하옵소서]]
+제목::[가장제일교회] [[표어]]
 ===
-설명*:: 제자 공동체인<b class='colyel churchname'>우리 교회 </b>를 위해 기도합시다.
+설명*::행복한 교회 공동체<b class='colyel churchname'>나로부터 시작되리!</b>
 ---
-중간본문::주님은 성부, 성자, 성령이 하나이듯, 모든 제자들이 하나가 되길 기도하십니다.
+중간본문::내게 주신 모든 은혜를 내가 여호와께 무엇으로 보답할까
 줄바꿈::
-중간본문::제자들에게 필요한 것은 [‘나’]가 아니라 [‘우리’ ‘함께’ ‘서로’] 입니다. 우리가 하나 되지 못하면 하나님의 영광을 볼 수 없습니다.
+오른쪽본문::(시 116:12)
 줄바꿈::
-중간본문::주님의 몸된 우리 교회가 온전히 하나되게 하소서.
+중간본문::가장제일교회 비전선언문
 줄바꿈::
-가운데작은본문::[서로 사랑함으로 교회 안의 여러 문제들을 넘어서게 하소서]
+가운데작은본문::[가장제일교회의 비전은, 모든 성도가 주님 안에서 느끼는 행복이 최고의 행복임을 깨달아]
+줄바꿈::
+가운데작은본문::[가정과 일터와 교회에서 행복한 모습으로 공동체를 이루어 살며, 내가 속한 공동체를 하나님의 나라로 만들어 가는 것입니다.]
 <h5 class='prayer_text'></h5>
 
 
 다음버튼::다음
 </div>
 
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_night_city.jpg" >
-제목:: [세상이] [[미워하였사오니]]
-===
-설명*::한국 교회를 위해 기도합시다.
----
-
-
-중간본문::세상은 자기에게 속하지 않는 자들을 미워합니다. 교회는 미움받을 수 밖에 없습니다. 
-줄바꿈::
-중간본문::그럼에도 우리는, [하나님이 세상을 이처럼 사랑]하셨다[[[요3:16]]] 는 복음을 들었습니다. 
-줄바꿈::
-중간본문::세상의 미움 속에도 서로 사랑하며, 사랑을 전하는 한국교회되게 하소서
-줄바꿈::
-다음버튼::다음
-
-</div>
-
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_cloud_warm.jpg">
-
-제목::[기도문], [[사라피온]]
-===
-설명*::믿음의 사람들의 기도문을 소리내어 읽습니다.
----
-중간본문::살아있는 순전한 손을 이 백성의 머리 위에 펴소서. 
-중간본문::유일하신 아들, 죄악을 깨뜨리고 모든 거룩한 것들을 세우시고 지키시는 그 분의 손을 이 백성 머리 위에 펼치소서. 
-줄바꿈::
-중간본문::이 백성이 성령의 복을 받게 하소서, 
-중간본문::하늘의 복을 받게 하소서, 
-중간본문::예언자들과 사도들의 복을 받게 하소서.
-줄바꿈::
-중간본문:: 이 백성 모든 몸들이 스스로 가눌 수 있고 
-중간본문::온전해지도록 복을 받게 하소서. 
-
-다음버튼::계속
-
-
-
-
-</div>
-
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_cloud_warm.jpg">
-
-중간본문::그들의 영혼들이 배움과 지식 
-중간본문::그리고 신비로움의 복을 받게 하소서. 
-중간본문::그들 모두 동일하게 복을 받게 하소서.
-줄바꿈::
-중간본문::당신의 독생자 예수 그리스도를 통하여 
-중간본문::성령 안에 영광과 권능이 하나님께 
-중간본문::지금과 세세 영원토록 있을지어다.
-줄바꿈::
-오른쪽작은본문::Barrett-Lennard, (번역 김정)
-오른쪽작은본문::[The Sacramentary of Sarapion of Thmuis], 17-18. 
-
----
-작은본문::[사라피온 예식서]는 현존하는 가장 오랜 기도집으로 4세기 이집트교회의 주일예배와 세례, 성찬, 안수예식 등에 사용한 기도문을 담고 있습니다. 저자는 이집트 트무이스(Thmuis) 지방의 주교였던 사라피온(Bishop Sarapion)으로 알려져 있습니다. 
-작은본문::출처:김정. (2016). 사라피온 예식서. 장신논단, 48(2), 151-174.
-줄바꿈::
-다음버튼::아멘
-</div>
-
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/manstar10.jpg"  data-desktop="https://pgsixt.github.io/15/14_many_star.jpg">
-
-
-
-제목::[기다림], [[주님의 뜻을 기다리며]]
-===
-설명*::주님이 우리에게 주시는 마음이 있는지 살펴봅시다.
-설명*::억지로 생각을 짜내지 않고, 침묵합니다.
-설명*::모든 생각이 주님의 것은 아닙니다. 떠오른 것 중에는 내 생각와 욕구, 할 일도 있습니다. 자연스러운 과정이니 괜찮습니다. 
----
-
-가운데작은본문::예수께서 대답하여 이르시되
-가운데중간본문:: 시몬아 내가 네게 이를 말이 있다 하시니
-줄바꿈::
-가운데중간본문:: 그가 이르되 선생님 [말씀하소서] 
-
-
-가운데작은본문::누가복음 7:40
-줄바꿈::
-줄바꿈::
-가운데중간본문::고요한 가운데 잠시 침묵합니다.
-다음버튼::다음
-
-</div>
-
-<div class='maincard clearfix' data-bg="http://ministry.ssch.net/prayer/write.jpg">
-
-제목::[한 줄 기도문], [[마음을 분별하며]]
-===
-설명*::기도 가운데 떠올린 생각이나 마음, 감사 제목이나 새롭게 드린 기도를 한 줄로 기록합니다.
-설명*::생각난 부분은 다음 기도 시간에 기도하십시오.
-
- 
-<input type='text' placeholder="내게 주신 마음..." class='oneline' id='ip_confess' />
-
-줄바꿈::
-중간본문::억지로 적지 않아도 됩니다. 주님 안에 거한 것으로 충분합니다.
-
-다음버튼::다음
-
- 
-
-</div>
-
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/ochestra.jpg">
-
-제목::[감사], [[간구를 들으신 주님께 ]]
-===
-설명*::기도를 인도하신 주님께 감사를 올려드립니다.
-설명*:: 하나님께서 우리의 기도를 듣고 영화롭게 하십니다.
-설명*::아래의 구절을 읽고, 감사를 올려드립니다.
----
-가운데중간본문:: 여호와께 노래하라 
-가운데중간본문::너희는 여호와를 찬양하라 
-가운데중간본문::가난한 자의 생명을 
-가운데중간본문::행악자의 손에서 구원하셨음이니라
-
-
-줄바꿈::
-가운데작은본문::예레미야 20:13
-줄바꿈::
-다음버튼::감사합니다
-
-</div>
-
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_field_3.jpg" data-desktop="https://pgsixt.github.io/15/15_field_3_wide.jpg">
 
-제목::[파송], [[세상을 향하여 ]]
+제목::[세상][[으로 나갑니다.]]
 ===
 가운데중간본문::오늘의 온라인 기도는 마쳤습니다.
 줄바꿈::
