--- a/index.html
+++ b/index.html
@@ -101,6 +101,25 @@
 중간본문::나의 앞에 반석에서 샘물 나게 하시네(×2)
 줄바꿈::
 
+<button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
+
+</div>
+
+<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_piano.jpg" >
+줄바꿈::
+
+제목::[찬양][[합니다.]]
+===
+설명*::찬양의 기사를 천천히 읽어 봅니다.
+---
+중간본문::3
+중간본문::나의 갈 길 다가도록 예수 인도하시니
+중간본문::그의 사랑 어찌 큰지 말로 할 수 없도다
+중간본문::성령 감화 받은 영혼 하늘나라 갈 때에
+중간본문::영영 부를 나의 찬송 예수 인도하셨네(×2)
+중간본문::아멘
+줄바꿈::
+
 줄바꿈::
 오른쪽작은본문::F.I.A-나의 갈 길 다가도록(찬송가 384장)
 
@@ -110,8 +129,8 @@
 
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
 
-</div>
-
+</div>				
+				
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_dark_night_moon.jpg">
 
 제목::[주님][[의 말씀입니다.]]
@@ -135,6 +154,9 @@
 
 제목::[주님][[의 말씀입니다.]]
 ---
+설명*::말씀을 천천히 읽습니다.
+설명*::본문 : 살전 5:1-11
+---
 중간본문::5 너희는 다 빛의 아들이요 낮의 아들이라 우리가 밤이나 어둠에 속하지 아니하나니
 줄바꿈::
 중간본문::6 그러므로 우리는 다른 이들과 같이 자지 말고 오직 깨어 정신을 차릴지라
@@ -152,6 +174,9 @@
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_dark_night_moon.jpg">
 
 제목::[주님][[의 말씀입니다.]]
+---
+설명*::말씀을 천천히 읽습니다.
+설명*::본문 : 살전 5:1-11
 ---
 중간본문::10 예수께서 우리를 위하여 죽으사 우리로 하여금 깨어 있든지 자든지 자기와 함께 살게 하려 하셨느니라
 줄바꿈::
@@ -220,7 +245,7 @@
 ---
 중간본문::내게 주신 모든 은혜를 내가 여호와께 무엇으로 보답할까
 줄바꿈::
-오른쪽본문::(시 116:12)
+중간본문::(시 116:12)
 줄바꿈::
 중간본문::가장제일교회 비전선언문
 줄바꿈::
