--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 중간본문::나는 심히 고단하고 영혼 매우 갈하나
 중간본문::나의 앞에 반석에서 샘물 나게 하시네(×2)
 줄바꿈::
-
-<button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
-
+	
+다음버튼::계속
+	
 </div>
 
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_piano.jpg" >
@@ -124,8 +124,9 @@
 오른쪽작은본문::F.I.A-나의 갈 길 다가도록(찬송가 384장)
 
 유튜브::18JLajtq7iM
-
+	
 줄바꿈::
+다음버튼::계속
 
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
 
