--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
 유튜브::18JLajtq7iM
 	
 줄바꿈::
-다음버튼::계속
 
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
 
@@ -251,10 +250,10 @@
 
 제목::[가장제일교회] [[비전선언문]]
 ===
+가운데중간본문::[가장제일교회의 비전은, 모든 성도가 주님 안에서 느끼는 행복이 최고의 행복임을 깨달아]
 줄바꿈::
-가운데본문::[가장제일교회의 비전은, 모든 성도가 주님 안에서 느끼는 행복이 최고의 행복임을 깨달아]
-줄바꿈::
-가운데본문::[가정과 일터와 교회에서 행복한 모습으로 공동체를 이루어 살며, 내가 속한 공동체를 하나님의 나라로 만들어 가는 것입니다.]
+가운데중간본문::[가정과 일터와 교회에서 행복한 모습으로 공동체를 이루어 살며, 내가 속한 공동체를 하나님의 나라로 만들어 가는 것입니다.]
+	
 <h5 class='prayer_text'></h5>
 
 
