--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
 	
 줄바꿈::
+---
+줄바꿈::
 오른쪽작은본문::F.I.A-나의 갈 길 다가도록(찬송가 384장)
 
 유튜브::18JLajtq7iM
