--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 줄바꿈::
 줄바꿈::
 ===
-<h4 class='text-center'><b class='colyel churchname'> </b>가장제일교회 온라인 기도실</h4>
-	<h6 class='text-center text-white'>행복한 교회 공동체</h6>
+<h4 class='text-center'><b class='colyel churchname'> </b>가장제일교회</h4>
+	<h6 class='text-center text-white'>금요기도회</h6>
  
 ---
   
