--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 제목::[주님][[의 말씀입니다.]]
 ---
 설명*::말씀을 천천히 읽습니다.
-설명*::본문 : 살전 5:1-11
+설명*::본문 : 데살로니가전서 5장 10-11절
 ---
 중간본문::1 형제들아 때와 시기에 관하여는 너희에게 쓸 것이 없음은
 줄바꿈::
@@ -155,7 +155,7 @@
 제목::[주님][[의 말씀입니다.]]
 ---
 설명*::말씀을 천천히 읽습니다.
-설명*::본문 : 살전 5:1-11
+설명*::본문 : 데살로니가전서 5장 10-11절
 ---
 중간본문::5 너희는 다 빛의 아들이요 낮의 아들이라 우리가 밤이나 어둠에 속하지 아니하나니
 줄바꿈::
@@ -176,7 +176,7 @@
 제목::[주님][[의 말씀입니다.]]
 ---
 설명*::말씀을 천천히 읽습니다.
-설명*::본문 : 살전 5:1-11
+설명*::본문 : 데살로니가전서 5장 10-11절
 ---
 중간본문::10 예수께서 우리를 위하여 죽으사 우리로 하여금 깨어 있든지 자든지 자기와 함께 살게 하려 하셨느니라
 줄바꿈::
@@ -190,13 +190,13 @@
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_beam_mountain.jpg" data-desktop="https://pgsixt.github.io/15/15_beam_field.jpg">
 
 
-제목::[설교] [[제목]]
+제목::[[깨어 기다리는]] [[삶]]
 ===
-설명*::말씀
----
-중간본문::말씀
-줄바꿈::
 
+유튜브::j3T5RijtspI
+	
+줄바꿈::
+	
 다음버튼::다음
 
 </div>
@@ -206,14 +206,12 @@
  
 제목::[오늘의] [[말씀입니다.]]
 ===
-설명*::본문
+설명*::데살로니가전서 5장 10-11절
 ---
 
-중간본문::말씀1
+중간본문::[10 예수께서 우리를 위하여 죽으사 우리로 하여금 깨어 있든지 자든지 자기와 함께 살게 하려 하셨느니라]
 줄바꿈::
-중간본문::말씀2
-줄바꿈::
-중간본문::말씀3
+중간본문::[11 그러므로 피차 권면하고 서로 덕을 세우기를 너희가 하는 것 같이 하라]
 줄바꿈::
 
 다음버튼::다음
@@ -224,14 +222,13 @@
 제목:: [기도] [[합니다.]]
 
 ===
-설명*::기도제목
----
-
-중간본문::기도내용1
+중간본문::1. 코로나와 한파의 이 상황을 잘 견디고 이겨낼 힘을 주소서.
 줄바꿈::
-중간본문::기도내용2
+중간본문::2. 비대면 예배이지만 동일한 성령의 은혜를 체험케 하여 주소서.
 줄바꿈::
-가운데작은본문::[기도내용3]
+중간본문::3. 2021년도에 이룰 꿈과 소망이 있습니다. 들어주소서. 
+줄바꿈::
+중간본문::4. 가장제일교회 40주년, 새로운 원년이 되게 하소서. 
 줄바꿈::
 다음버튼::다음
 
@@ -266,11 +263,11 @@
 
 제목::[세상][[으로 나갑니다.]]
 ===
-가운데중간본문::오늘의 온라인 기도는 마쳤습니다.
+가운데중간본문::[오늘의 온라인 기도는 마쳤습니다.]
 줄바꿈::
-가운데중간본문::주님께서 함께 하십니다.
+가운데중간본문::[주님께서 함께 하십니다.]
 줄바꿈::
-가운데중간본문::세상을 향하여 나아가시기 바랍니다.
+가운데중간본문::[세상을 향하여 나아가시기 바랍니다.]
 줄바꿈::
 
 줄바꿈::
