--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 다음버튼::다음
 </div>
 
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_field_3.jpg" data-desktop="https://pgsixt.github.io/15/15_field_3_wide.jpg">
+<div class='maincard clearfix' data-bg="https://pgsixt.github.io/14/14_star_night.jpg" data-desktop="https://pgsixt.github.io/15/15_field_3_wide.jpg">
 
 제목::[세상][[으로 나갑니다.]]
 ===
