--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 			<!-- <meta property="og:url" content="<?=($_SERVER['HTTP_HOST'].$_SERVER['REQUEST_URI'])?>" />  -->
 		<meta property="og:type" content="website" /> 
 		<meta property="og:image" content="https://gj1st.github.io/15/0108.jpg" />
-		<meta property="og:title" content="온라인 기도실" />  
-		<meta property="og:description" content="어디에나 계신 주님과 지금 여기에" />
+		<meta property="og:title" content="가장제일교회" />  
+		<meta property="og:description" content="금요기도회" />
 		 
 		<!-- CSS only -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
