--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 중간본문::그의 사랑 어찌 큰지 말로 할 수 없도다
 중간본문::성령 감화 받은 영혼 하늘나라 갈 때에
 중간본문::영영 부를 나의 찬송 예수 인도하셨네(×2)
-중간본문::아멘
-<button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
+
+<button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >아멘</button>
 줄바꿈::
 줄바꿈::
 ---
@@ -238,7 +238,7 @@
 
 제목::[가장제일교회] [[표어]]
 ===
-설명*::행복한 교회 공동체<b class='colyel churchname'>나로부터 시작되리!</b>
+설명*::행복한 교회 공동체 <b class='colyel churchname'>나로부터 시작되리!</b>
 ---
 중간본문::내게 주신 모든 은혜를 내가 여호와께 무엇으로 보답할까
 줄바꿈::
@@ -261,17 +261,17 @@
 
 <div class='maincard clearfix' data-bg="https://gj1st.github.io/14/14_star_night.jpg" data-desktop="https://gj1st.github.io/14/14_star_night.jpg">
 
-제목::[세상][[으로 나갑니다.]]
+제목::[편안한 밤] [[되세요.]]
 ===
 가운데중간본문::[오늘의 온라인 기도는 마쳤습니다.]
 줄바꿈::
 가운데중간본문::[주님께서 함께 하십니다.]
 줄바꿈::
-가운데중간본문::[세상을 향하여 나아가시기 바랍니다.]
+가운데중간본문::[사랑합니다. 축복합니다.]
 줄바꿈::
 
 줄바꿈::
-<a  class="btn btn-warning  float-right btn-block"  id='btn_end' >한 걸음 내딛으며</a>
+<a  class="btn btn-warning  float-right btn-block"  id='btn_end' >나로부터 시작되리!</a>
 </div>
 
 
