--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 중간본문::성령 감화 받은 영혼 하늘나라 갈 때에
 중간본문::영영 부를 나의 찬송 예수 인도하셨네(×2)
 
-<button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >아멘</button>
+<button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
 줄바꿈::
 줄바꿈::
 ---
 줄바꿈::
-오른쪽작은본문::나의 갈 길 다 가도록(찬송가 384장)
+오른쪽작은본문::아래 영상을 클릭하시면 찬양을 들으실 수 있습니다.
 
 유튜브::j3T5RijtspI
 	
