--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 중간본문::4
 중간본문::예수의 넓은 사랑을 어찌 다 말하랴
 중간본문::주 사랑 받은 사람만 그 사랑 알도다
+줄바꿈::
 중간본문::5
 중간본문::사랑의 구주 예수여 내 기쁨 되시고
 중간본문::이제로부터 영원히 영광이 되소서
@@ -206,7 +207,7 @@
 줄바꿈::
 중간본문::28 우리 주 예수 그리스도의 은혜가 너희에게 있을지어다
 	
-다음버튼:아멘
+다음버튼::아멘
 
 </div>
 
