--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
 <div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_beam_mountain.jpg" data-desktop="https://pgsixt.github.io/15/15_beam_field.jpg">
 
 
-제목::[[성도의 기본적인]] [[삶]]
+제목::[[슬픔을 머금은]] [[기쁨]]
 ===
 	
 줄바꿈::
 	
-유튜브::BElnjpesYHg
+유튜브::nHUORi-GYIg
 	
 줄바꿈::
 	
