--- a/index.html
+++ b/index.html
@@ -232,14 +232,16 @@
  
 제목::[오늘의] [[말씀입니다.]]
 ===
-설명*::데살로니가전서 5장 10-11절
+설명*::데살로니가전서 5장 16-18절
 ---
 
-중간본문::[10 예수께서 우리를 위하여 죽으사 우리로 하여금 깨어 있든지 자든지 자기와 함께 살게 하려 하셨느니라]
+중간본문::[16 항상 기뻐하라]
 줄바꿈::
-중간본문::[11 그러므로 피차 권면하고 서로 덕을 세우기를 너희가 하는 것 같이 하라]
+중간본문::[17 쉬지 말고 기도하라]
 줄바꿈::
-
+중간본문::[18 범사에 감사하라 이것이 그리스도 예수 안에서 너희를 향하신 하나님의 뜻이니라]
+줄바꿈::
+	
 다음버튼::다음
 </div>
 
@@ -248,13 +250,11 @@
 제목:: [기도] [[합니다.]]
 
 ===
-중간본문::1. 코로나와 한파의 이 상황을 잘 견디고 이겨낼 힘을 주소서.
+중간본문::1. 기뻐하게 하소서
 줄바꿈::
-중간본문::2. 비대면 예배이지만 동일한 성령의 은혜를 체험케 하여 주소서.
+중간본문::2. 기도하게 하소서
 줄바꿈::
-중간본문::3. 2021년도에 이룰 꿈과 소망이 있습니다. 들어주소서. 
-줄바꿈::
-중간본문::4. 가장제일교회 40주년, 새로운 원년이 되게 하소서. 
+중간본문::3. 감사하게 하소서
 줄바꿈::
 다음버튼::다음
 
