--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 시작버튼:: 
 </div>
 
-<div class='maincard clearfix'  data-bg="https://pgsixt.github.io/15/15_morning_way_light.jpg" data-desktop="https://pgsixt.github.io/15/15_path.jpg">
+<div class='maincard clearfix'  data-bg="https://gj1st.github.io/phon/b2.jpg" data-desktop="https://gj1st.github.io/pc/b2.jpg">
 
 제목::[알립니다.]
 ===
@@ -81,7 +81,7 @@
 
 </div>
 
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_piano.jpg" >
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/c1.jpg" >
 줄바꿈::
 
 제목::[찬양][[합니다.]]
@@ -105,7 +105,7 @@
 	
 </div>
 
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_piano.jpg" >
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/c1.jpg" >
 줄바꿈::
 
 제목::[찬양][[합니다.]]
@@ -132,7 +132,7 @@
 
 </div>
 				
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_dark_night_moon.jpg">
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/d5.jpg">
 
 제목::[주님][[의 말씀입니다.]]
 ---
@@ -149,7 +149,7 @@
 
 </div>
 				
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_beam_mountain.jpg" data-desktop="https://pgsixt.github.io/15/15_beam_field.jpg">
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/e6.jpg" data-desktop="https://gj1st.github.io/pc/e1.jpg">
 
 
 제목::[[약속의 땅]][[을 앞에 두고]]
@@ -166,7 +166,7 @@
 </div>
 
 
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_baby_hand.jpg">
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/f1.jpg">
 
 제목:: [기도] [[합니다.]]
 
@@ -181,7 +181,7 @@
 
 </div>
 
-<div class='maincard clearfix' data-bg="https://pgsixt.github.io/15/15_red_cross.jpg" data-desktop="https://pgsixt.github.io/15/15_bluecross.jpg">
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/g2.jpg" data-desktop="https://gj1st.github.io/phon/g2.jpg">
 
 제목::[가장제일교회] [[표어]]
 ===
@@ -206,7 +206,7 @@
 다음버튼::다음
 </div>
 
-<div class='maincard clearfix' data-bg="https://gj1st.github.io/14/14_star_night.jpg" data-desktop="https://gj1st.github.io/14/14_star_night.jpg">
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/h2.jpg" data-desktop="https://gj1st.github.io/pc/h2.jpg">
 
 제목::[새해 복] [[많이 받으세요.]]
 ===
