--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 </div>
 				
-<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/e6.jpg" data-desktop="https://gj1st.github.io/pc/e1.jpg">
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/f4.jpg" data-desktop="https://gj1st.github.io/pc/e1.jpg">
 
 
 제목::[[약속의 땅]][[을 앞에 두고]]
