--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 줄바꿈::
 ===
 <h4 class='text-center'><b class='colyel churchname'> </b>가장제일교회</h4>
-	<h6 class='text-center text-white'>설명절예배</h6>
+	<h6 class='text-center text-white'>수요기도회</h6>
  
 ---
   
