--- a/index.html
+++ b/index.html
@@ -63,7 +63,19 @@
   
 시작버튼:: 
 </div>
+				
+<div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/g1.jpg">
 
+설명*::오늘 설교는
+설명*::대전기독교방송(CBS)에서 제작 편집하여
+설명*::어제 보내온 영상입니다.
+설명*::이 때를 위해 준비된 영상이라 생각이 되어,
+설명*::성도님들과 공유합니다. 
+	
+다음버튼::계속
+
+</div>
+				
 <div class='maincard clearfix'  data-bg="https://gj1st.github.io/phon/b2.jpg" data-desktop="https://gj1st.github.io/pc/b2.jpg">
 
 제목::[알립니다.]
@@ -77,7 +89,6 @@
 오른쪽작은본문::준비가 되면, 아래의 [버튼]을 눌러주세요. 
 줄바꿈::
 다음버튼::예배하기
-
 
 </div>
 
@@ -154,11 +165,13 @@
 제목:: [기도] [[합니다.]]
 
 ===
-중간본문::1. 우리 가족들에게 건강과 평안을 주소서.
+중간본문::1. 하나님을 사랑하는 자녀들이게 하소서.
 줄바꿈::
-중간본문::2. 성도들의 일터와 사업장을 지켜 주소서.
+중간본문::2. 코로나의 이 상황을 이겨내게 하소서.
 줄바꿈::
-중간본문::3. 우리 교회가 빛과 소금이 되게 하소서.
+중간본문::3. 교회학교 여름행사를 지켜 주소서.
+줄바꿈::
+중간본문::4. 일상이 회복되고 예배가 회복되게 하소서.
 줄바꿈::
 다음버튼::다음
 
