--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 <div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/h2.jpg" data-desktop="https://gj1st.github.io/pc/h2.jpg">
 
-제목::[새해 복] [[많이 받으세요.]]
+제목::[편안한 밤] [[되세요.]]
 ===
 가운데중간본문::[수요기도회는 마쳤습니다.]
 줄바꿈::
