--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
 ===
 설명*::찬양의 가사를 천천히 읽어 봅니다.
 ---
-중간본문::[445장][[태산을 넘어]]
+중간본문::[[445장]][태산을 넘어 험곡에 가도]
 중간본문::1
 중간본문::태산을 넘어 험곡에 가도 빛 가운데로 걸어가면 
 중간본문::주께서 항상 지키시기로 약속한 말씀 변치않네
-중간본문::하늘에 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
+중간본문::하늘의 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
 중간본문::할렐루야를 힘차게 불러 영원히 주를 찬양하리
 줄바꿈::
 중간본문::2
 중간본문::캄캄한 밤에 다닐지라도 주께서 나의 길되시고 
 중간본문::나에게 밝은 빛이 되시니 길잃어 버릴 염려없네
-중간본문::하늘에 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
+중간본문::하늘의 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
 중간본문::할렐루야를 힘차게 불러 영원히 주를 찬양하리
 줄바꿈::
 	
@@ -115,7 +115,7 @@
 중간본문::3
 중간본문::광명한 그 빛 마음에 받아 찬란한 천국 바라보고
 중간본문::할렐루야를 힘차게 불러 날마다 빛에 걸어가리
-중간본문::하늘에 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
+중간본문::하늘의 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
 중간본문::할렐루야를 힘차게 불러 영원히 주를 찬양하리
 줄바꿈::
 
@@ -137,11 +137,11 @@
 제목::[주님][[의 말씀입니다.]]
 ---
 설명*::말씀을 천천히 읽습니다.
-설명*::본문 : 시편 90편 2-3절
+설명*::본문 : 시편 91편 2-3절
 ---
-중간본문::2 산이 생기기 전, 땅과 세계도 주께서 조성하시기 전 곧 영원부터 영원까지 주는 하나님이시니이다
+중간본문::2 나는 여호와를 향하여 말하기를 그는 나의 피난처요 나의 요새요 내가 의뢰하는 하나님이라 하리니
 
-중간본문::3 주께서 사람을 티끌로 돌아가게 하시고 말씀하시기를 너희 인생들은 돌아가라 하셨사오니
+중간본문::3 이는 그가 너를 새 사냥꾼의 올무에서와 심한 전염병에서 건지실 것임이로다
 
 다음버튼::계속
 
