--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 ===
 설명*::찬양의 가사를 천천히 읽어 봅니다.
 ---
-중간본문::[[445장]][태산을 넘어 험곡에 가도]
+중간본문::[445장][태산을 넘어 험곡에 가도]
 중간본문::1
 중간본문::태산을 넘어 험곡에 가도 빛 가운데로 걸어가면 
 중간본문::주께서 항상 지키시기로 약속한 말씀 변치않네
