--- a/index.html
+++ b/index.html
@@ -87,18 +87,20 @@
 ===
 설명*::찬양의 가사를 천천히 읽어 봅니다.
 ---
-중간본문::[445장][태산을 넘어 험곡에 가도]
+중간본문::[384장][나의 갈 길 다가도록]
 중간본문::1
-중간본문::태산을 넘어 험곡에 가도 빛 가운데로 걸어가면 
-중간본문::주께서 항상 지키시기로 약속한 말씀 변치않네
-중간본문::하늘의 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
-중간본문::할렐루야를 힘차게 불러 영원히 주를 찬양하리
+중간본문::나의 갈 길 다가도록 예수 인도하시니
+중간본문::내 주 안에 있는 긍휼 어찌 의심하리요
+중간본문::믿음으로 사는 자는 하늘 위로 받겠네
+중간본문::무슨 일을 만나든지 만사 형통하리라
+중간본문::무슨 일을 만나든지 만사 형통하리라
 줄바꿈::
 중간본문::2
-중간본문::캄캄한 밤에 다닐지라도 주께서 나의 길되시고 
-중간본문::나에게 밝은 빛이 되시니 길잃어 버릴 염려없네
-중간본문::하늘의 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
-중간본문::할렐루야를 힘차게 불러 영원히 주를 찬양하리
+중간본문::나의 갈 길 다가도록 예수 인도하시니
+중간본문::어려운 일 당한 때도 족한 은혜 주시네
+중간본문::나는 심히 고단하고 영혼 매우 갈하나
+중간본문::나의 앞에 반석에서 샘물 나게 하시네
+중간본문::나의 앞에 반석에서 샘물 나게 하시네
 줄바꿈::
 	
 다음버튼::계속
@@ -113,10 +115,11 @@
 설명*::찬양의 가사를 천천히 읽어 봅니다.
 ---
 중간본문::3
-중간본문::광명한 그 빛 마음에 받아 찬란한 천국 바라보고
-중간본문::할렐루야를 힘차게 불러 날마다 빛에 걸어가리
-중간본문::하늘의 영광 하늘의 영광 나의 맘 속에 차고도 넘쳐
-중간본문::할렐루야를 힘차게 불러 영원히 주를 찬양하리
+중간본문::나의 갈 길 다가도록 예수 인도하시니
+중간본문::그의 사랑 어찌 큰지 말로 할 수 없도다
+중간본문::성령 감화 받은 영혼 하늘 나라 갈 때에
+중간본문::영영 부를 나의 찬송 예수 인도하셨네
+중간본문::영영 부를 나의 찬송 예수 인도하셨네 아멘
 줄바꿈::
 
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
@@ -126,7 +129,7 @@
 줄바꿈::
 오른쪽작은본문::아래 영상을 클릭하시면 찬양을 들으실 수 있습니다.
 
-유튜브::Sr6zv52TOyc
+유튜브::6AQsM03z0vU
 	
 줄바꿈::
 
@@ -137,12 +140,16 @@
 제목::[주님][[의 말씀입니다.]]
 ---
 설명*::말씀을 천천히 읽습니다.
-설명*::본문 : 시편 91편 2-3절
+설명*::본문 : 예레미야 17장 5-8절
 ---
-중간본문::2 나는 여호와를 향하여 말하기를 그는 나의 피난처요 나의 요새요 내가 의뢰하는 하나님이라 하리니
-
-중간본문::3 이는 그가 너를 새 사냥꾼의 올무에서와 심한 전염병에서 건지실 것임이로다
-
+중간본문::5 여호와께서 이와 같이 말씀하시니라 무릇 사람을 믿으며 육신으로 그의 힘을 삼고 마음이 여호와에게서 떠난 그 사람은 저주를 받을 것이라
+	
+중간본문::6 그는 사막의 떨기나무 같아서 좋은 일이 오는 것을 보지 못하고 광야 간조한 곳, 건건한 땅, 사람이 살지 않는 땅에 살리라
+	
+중간본문::7 그러나 무릇 여호와를 의지하며 여호와를 의뢰하는 그 사람은 복을 받을 것이라
+	
+중간본문::8 그는 물 가에 심어진 나무가 그 뿌리를 강변에 뻗치고 더위가 올지라도 두려워하지 아니하며 그 잎이 청청하며 가무는 해에도 걱정이 없고 결실이 그치지 아니함 같으리라
+	
 다음버튼::계속
 
 </div>
@@ -150,7 +157,7 @@
 <div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/f4.jpg" data-desktop="https://gj1st.github.io/pc/e1.jpg">
 
 
-제목::[[그럼에도]][[불구하고]]
+제목::[[물가에 심어진 나무처럼]]
 ===
 	
 줄바꿈::
@@ -169,11 +176,11 @@
 제목:: [기도] [[합니다.]]
 
 ===
-중간본문::1. 코로나의 이 어둠이 빨리 지나게 하소서.
+중간본문::1. 이 어려운 시대에 주님을 의지합니다.
 줄바꿈::
-중간본문::2. 이 어려운 때, 희망을 내려놓지 않게 하소서.
+중간본문::2. 물가에 심겨진 나무처럼 결실하게 하소서.
 줄바꿈::
-중간본문::3. 교회학교 여름행사를 위해 기도합니다.
+중간본문::3. 일상의 회복과 예배의 회복을 서둘러 주소서.
 줄바꿈::
 다음버튼::다음
 
