--- a/index.html
+++ b/index.html
@@ -87,20 +87,18 @@
 ===
 설명*::찬양의 가사를 천천히 읽어 봅니다.
 ---
-중간본문::[384장][나의 갈 길 다가도록]
+중간본문::[400장][험한 시험 물 속에서]
 중간본문::1
-중간본문::나의 갈 길 다가도록 예수 인도하시니
-중간본문::내 주 안에 있는 긍휼 어찌 의심하리요
-중간본문::믿음으로 사는 자는 하늘 위로 받겠네
-중간본문::무슨 일을 만나든지 만사 형통하리라
-중간본문::무슨 일을 만나든지 만사 형통하리라
+중간본문::험한 시험 물 속에서 나를 건져주시고
+중간본문::노한 풍랑 지나도록 나를 숨겨 주소서
+중간본문::주여 나를 돌보시사 고이 품어 주시고
+중간본문::험한 풍파 지나도록 나를 숨겨 주소서
 줄바꿈::
 중간본문::2
-중간본문::나의 갈 길 다가도록 예수 인도하시니
-중간본문::어려운 일 당한 때도 족한 은혜 주시네
-중간본문::나는 심히 고단하고 영혼 매우 갈하나
-중간본문::나의 앞에 반석에서 샘물 나게 하시네
-중간본문::나의 앞에 반석에서 샘물 나게 하시네
+중간본문::권세 능력 무한하사 모든 시험 이기고
+중간본문::풍랑까지 다스리는 주님 앞에 비오니
+중간본문::주여 나를 돌보시사 고이 품어 주시고
+중간본문::험한 풍파 지나도록 나를 숨겨 주소서
 줄바꿈::
 	
 다음버튼::계속
@@ -115,11 +113,10 @@
 설명*::찬양의 가사를 천천히 읽어 봅니다.
 ---
 중간본문::3
-중간본문::나의 갈 길 다가도록 예수 인도하시니
-중간본문::그의 사랑 어찌 큰지 말로 할 수 없도다
-중간본문::성령 감화 받은 영혼 하늘 나라 갈 때에
-중간본문::영영 부를 나의 찬송 예수 인도하셨네
-중간본문::영영 부를 나의 찬송 예수 인도하셨네 아멘
+중간본문::죄악길에 빠진 이 몸 캄캄한데 헤매며
+중간본문::부르짖는 나의 애환 들으소서 내 주여
+중간본문::주여 나를 돌보시사 고이 품어 주시고
+중간본문::험한 풍파 지나도록 나를 숨겨 주소서 아멘
 줄바꿈::
 
 <button type="submit"   class="btn btn-warning btn_next float-right" name="button" data-kill='#if1' onclick='aup.play();' >다음</button>
@@ -129,7 +126,7 @@
 줄바꿈::
 오른쪽작은본문::아래 영상을 클릭하시면 찬양을 들으실 수 있습니다.
 
-유튜브::6AQsM03z0vU
+유튜브::tOG4JFhNasE
 	
 줄바꿈::
 
@@ -140,11 +137,13 @@
 제목::[주님][[의 말씀입니다.]]
 ---
 설명*::말씀을 천천히 읽습니다.
-설명*::본문 : 예레미야 17장 7-8절
+설명*::본문 : 예레미야 31장 7-9절
 ---
-중간본문::7 그러나 무릇 여호와를 의지하며 여호와를 의뢰하는 그 사람은 복을 받을 것이라
+중간본문::7 여호와께서 이와 같이 말씀하시니라 너희는 여러 민족의 앞에 서서 야곱을 위하여 기뻐 외치라 너희는 전파하며 찬양하며 말하라 여호와여 주의 백성 이스라엘의 남은 자를 구원하소서 하라
 	
-중간본문::8 그는 물 가에 심어진 나무가 그 뿌리를 강변에 뻗치고 더위가 올지라도 두려워하지 아니하며 그 잎이 청청하며 가무는 해에도 걱정이 없고 결실이 그치지 아니함 같으리라
+중간본문::8 보라 나는 그들을 북쪽 땅에서 인도하며 땅 끝에서부터 모으리라 그들 중에는 맹인과 다리 저는 사람과 잉태한 여인과 해산하는 여인이 함께 있으며 큰 무리를 이루어 이 곳으로 돌아오리라
+
+중간본문::9 그들이 울며 돌아오리니 나의 인도함을 받고 간구할 때에 내가 그들을 넘어지지 아니하고 물 있는 계곡의 곧은 길로 가게 하리라 나는 이스라엘의 아버지요 에브라임은 나의 장자니라
 	
 다음버튼::계속
 
@@ -153,12 +152,12 @@
 <div class='maincard clearfix' data-bg="https://gj1st.github.io/phon/f4.jpg" data-desktop="https://gj1st.github.io/pc/e1.jpg">
 
 
-제목::[[물가에 심어진 나무처럼]]
+제목::[[그 자리에서 다시]]
 ===
 	
 줄바꿈::
 	
-유튜브::HN6Cg6eD-XM
+유튜브::tLdNrpV4hUg
 	
 줄바꿈::
 	
@@ -172,11 +171,13 @@
 제목:: [기도] [[합니다.]]
 
 ===
-중간본문::1. 이 어려운 시대에 주님을 의지합니다.
+중간본문::1. 험한 시험 물속에서 우리를 건져주소서.
 줄바꿈::
-중간본문::2. 물가에 심겨진 나무처럼 결실하게 하소서.
+중간본문::2. 노한 풍랑 지나도록 우리를 숨겨주소서.
 줄바꿈::
-중간본문::3. 일상의 회복과 예배의 회복을 서둘러 주소서.
+중간본문::3. 이 어려움을 잘 이겨내게 하여 주소서. 
+줄바꿈::
+중간본문::4. 일상과 예배를 되찾게 하소서.
 줄바꿈::
 다음버튼::다음
 
